# CS421FinalProj

final-proj/: finalproj.cabal  stack.yaml
final-proj/app/: Main.hs
final-proj/src/: Lib.hs
final-proj/test/: Tests.hs
