name:                finalproj
version:             0.1.0.0
synopsis:            CS421 Final Project
license:             NCSA
build-type:          Simple
cabal-version:       >=1.10

executable main
    hs-source-dirs:     app, src
    other-modules:      Lib
    main-is:            Main.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base , unordered-containers >= 0.2 , array > 0.5
    default-language:   Haskell2010

test-suite test
    type:               exitcode-stdio-1.0
    other-modules:      Lib , Spec , Tests
    hs-source-dirs:     src , test
    main-is:            Spec.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N -main-is Spec.main
    build-depends:      base , unordered-containers >= 0.2 , array > 0.5
    build-depends:      base 
                      , array > 0.5
                      , unordered-containers >= 0.2 
                      , test-framework
                      , test-framework-quickcheck2
                      , QuickCheck
